include/altdss/capi/dss.h

    ALTDSS_CAPI_DLL void CNData_Set_EpsR(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_InsLayer(void);
    ALTDSS_CAPI_DLL void CNData_Set_InsLayer(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_DiaIns(void);
    ALTDSS_CAPI_DLL void CNData_Set_DiaIns(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_DiaCable(void);
    ALTDSS_CAPI_DLL void CNData_Set_DiaCable(double Value);
    ALTDSS_CAPI_DLL int32_t CNData_Get_k(void);
    ALTDSS_CAPI_DLL void CNData_Set_k(int32_t Value);
    ALTDSS_CAPI_DLL double CNData_Get_DiaStrand(void);
    ALTDSS_CAPI_DLL void CNData_Set_DiaStrand(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_GmrStrand(void);
    ALTDSS_CAPI_DLL void CNData_Set_GmrStrand(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_RStrand(void);
    ALTDSS_CAPI_DLL void CNData_Set_RStrand(double Value);
    ALTDSS_CAPI_DLL int32_t CNData_Get_idx(void);
    ALTDSS_CAPI_DLL void CNData_Set_idx(int32_t Value);