src/CAPI/CAPI_CNData.pas


    Result := elem.FEpsR;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_EpsR(Value: Double); CDECL;
var
    elem: TCNDataObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.FEpsR := Value;
    elem.PropertySideEffects(CableDataPropOffset + ord(TCableDataProp.EpsR))
end;
//------------------------------------------------------------------------------
function CNData_Get_InsLayer(): Double; CDECL;
var
    elem: TCNDataObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.FInsLayer;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_InsLayer(Value: Double); CDECL;
var
    elem: TCNDataObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.FInsLayer := Value;
    elem.PropertySideEffects(CableDataPropOffset + ord(TCableDataProp.InsLayer))
end;
//------------------------------------------------------------------------------
function CNData_Get_DiaIns(): Double; CDECL;
var
    elem: TCNDataObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.FDiaIns;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_DiaIns(Value: Double); CDECL;
var
    elem: TCNDataObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.FDiaIns := Value;
    elem.PropertySideEffects(CableDataPropOffset + ord(TCableDataProp.DiaIns))
end;
//------------------------------------------------------------------------------
function CNData_Get_DiaCable(): Double; CDECL;
var
    elem: TCNDataObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.FDiaCable;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_DiaCable(Value: Double); CDECL;
var
    elem: TCNDataObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.FDiaCable := Value;
    elem.PropertySideEffects(CableDataPropOffset + ord(TCableDataProp.DiaCable))
end;
//------------------------------------------------------------------------------
function CNData_Get_k(): Integer; CDECL;
var
    elem: TCNDataObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.FkStrand;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_k(Value: Integer); CDECL;
var
    elem: TCNDataObj;
    prevVal: Integer;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    prevVal := elem.FkStrand;
    elem.FkStrand := Value;
    elem.PropertySideEffects(ord(TCNDataProp.k), prevVal)
end;
//------------------------------------------------------------------------------
function CNData_Get_DiaStrand(): Double; CDECL;
var
    elem: TCNDataObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.FDiaStrand;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_DiaStrand(Value: Double); CDECL;
var
    elem: TCNDataObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.FDiaStrand := Value;
    elem.PropertySideEffects(ord(TCNDataProp.DiaStrand))
end;
//------------------------------------------------------------------------------
function CNData_Get_GmrStrand(): Double; CDECL;
var
    elem: TCNDataObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.FGmrStrand;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_GmrStrand(Value: Double); CDECL;
var
    elem: TCNDataObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.FGmrStrand := Value;
    elem.PropertySideEffects(ord(TCNDataProp.GmrStrand))
end;
//------------------------------------------------------------------------------
function CNData_Get_RStrand(): Double; CDECL;
var
    elem: TCNDataObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.FRStrand;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_RStrand(Value: Double); CDECL;
var
    elem: TCNDataObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.FRStrand := Value;
    elem.PropertySideEffects(ord(TCNDataProp.RStrand))
end;
//------------------------------------------------------------------------------
function CNData_Get_idx(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit(DSSPrime) then
        Exit;

    Result := DSSPrime.CNDataClass.ElementList.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure CNData_Set_idx(Value: Integer); CDECL;
begin
    if DSSPrime.CNDataClass.ElementList.Get(Value) = NIL then
        DoSimpleMsg(DSSPrime, 'Invalid %s index: "%d".', ['CNData', Value], 656565);
end;
//------------------------------------------------------------------------------
end.
